# mandala

./: .gitignore  CMakeLists.txt  README.md  mandala.sln
Debug/: resources
client/projects/msvc/: client.vcxproj
client/src/: main.cpp
engine/projects/msvc/: engine.vcxproj  engine.vcxproj.filters
engine/src/: PSKModelLoader.cpp  PSKModelLoader.hpp  aabb.hpp  action.hpp  actor.cpp  actor.hpp  api.hpp  app.cpp  app.hpp  arcball_camera.cpp  arcball_camera.hpp  audio_context.cpp  audio_context.hpp  audio_defs.hpp  audio_device.cpp  audio_device.hpp  audio_mgr.cpp  audio_mgr.hpp  audio_source.cpp  audio_source.hpp  audio_system.cpp  audio_system.hpp  basic_gpu_program.cpp  basic_gpu_program.hpp  bisect.hpp  bitmap_font.cpp  bitmap_font.hpp  bitmap_font_gpu_program.cpp  bitmap_font_gpu_program.hpp  blur_horizontal_gpu_program.cpp  blur_horizontal_gpu_program.hpp  boost.hpp  bsp.cpp  bsp.hpp  bsp_entity.cpp  bsp_entity.hpp  bsp_gpu_program.cpp  bsp_gpu_program.hpp  bsp_instance.hpp  bsp_state.cpp  (+226 more)
examples/window/window/: Fantasque Sans Mono.fnt  boblampclean.md5a  boblampclean.md5m  guard1_body.material  guard1_face.material  guard1_helmet.material  window.py  window.pyproj
ext/: README.txt
ext/glfw-3.0.1.bin.WIN32/lib-msvc100/: glfw3dll.lib
ext/glfw-3.0.1.bin.WIN64/lib-msvc110/: glfw3.lib  glfw3dll.lib
ext/glm-0.9.4.4/glm/core/: setup.hpp
ext/libpng-1.6.3/: pngread.c
gpu_programs/: .template  basic.frag  basic.vert  bitmap_font.frag  bitmap_font.vert  blur_horizontal.frag  blur_horizontal.vert  bsp.frag  bsp.vert  gui_image.frag  gui_image.vert  model.frag  model.vert  position.frag  position.vert
mandala/: aabb.h  aabb.hpp  actor.hpp  animation.cpp  animation.h  animation.hpp  app.cpp  app.h  app.hpp  arcball_camera.cpp  arcball_camera.h  arcball_camera.hpp  audio_context.cpp  audio_context.hpp  audio_device.cpp  audio_device.hpp  audio_mgr.cpp  audio_mgr.h  audio_mgr.hpp  audio_source.cpp  audio_source.h  audio_source.hpp  basic_gpu_program.cpp  basic_gpu_program.hpp  bitmap_font.cpp  bitmap_font.h  bitmap_font.hpp  bitmap_font_gpu_program.cpp  bitmap_font_gpu_program.hpp  blur_horizontal_gpu_program.cpp  blur_horizontal_gpu_program.hpp  bmf.h  body.h  boost.h  boost.hpp  bsp.cpp  bsp.h  bsp.hpp  bsp_entity.cpp  bsp_entity.hpp  (+243 more)
mandala/armada/: armada.cpp  armada.h  armada.hpp  bsp_state.cpp  bsp_state.h  bsp_state.hpp  console_state.cpp  console_state.hpp  data.h  debug_state.cpp  debug_state.hpp  pause_state.cpp  pause_state.h  pause_state.hpp  performance_state.cpp  performance_state.h  skybox.cpp  skybox.h  skybox.hpp  test_state.cpp  test_state.h  test_state.hpp  user.cpp  user.h  voxel_state.hpp  world.cpp  world.h  world_hud_state.cpp  world_hud_state.h  world_hud_state.hpp  world_state.cpp  world_state.h  world_state.hpp
mandala/gui/: gui_image.cpp  gui_image.h  gui_image.hpp  label.cpp  label.h  label.hpp  node.cpp  node.h  node.hpp  padding.h  padding.hpp
mandala/triad/: loading_state.hpp  login_state.hpp  triad.cpp  triad.hpp
projects/msvc/: mandala.sln  naga.sln
resources/: deploy.bat  deploy.py  deploy_strings.py  pack.py
resources/deploy/: pack.bat
resources/deploy/bitmap_fonts/: 04b_19_32_s.fnt  comicsansms_32.fnt  inconsolata_12.fnt  inconsolata_16.fnt  inconsolata_24.fnt  inconsolata_32.fnt  mickey_16.fnt  mickey_32.fnt  mickey_64.fnt  monaco_32_s.fnt  terminal_16.fnt  terminal_8.fnt  trebuchet_ms_16.fnt
resources/deploy/bsps/: dod_flash.bsp
resources/deploy/gpu_programs/bitmap_font/: bitmap_font.frag  bitmap_font.gpu  bitmap_font.vert
resources/deploy/gpu_programs/blur/: blur_h.frag  blur_h.gpu  blur_h.vert  blur_v.frag  blur_v.gpu
resources/deploy/gpu_programs/bsp/: bsp.frag  bsp.gpu  bsp.vert
resources/deploy/gpu_programs/gui_image/: gui_image.frag  gui_image.gpu  gui_image.vert
resources/deploy/gpu_programs/model/: model.frag  model.gpu  model.vert
resources/deploy/gpu_programs/model_unlit/: model_unlit.frag  model_unlit.gpu  model_unlit.vert
resources/deploy/materials/: guard1_body.mat  guard1_face.mat  guard1_helmet.mat  iron_grill.mat  round_grill.mat  skybox.mat  space_fighter_6.mat  space_frigate_6.mat  space_station_4.mat
resources/deploy/models/: boblampclean.md5a  boblampclean.md5m  skybox.md5m  skybox.md5mesh  space_fighter_6.md5m  space_fighter_6.md5mesh  space_frigate_6.md5m  space_frigate_6.md5mesh  space_station_4.md5m  space_station_4.md5mesh
resources/deploy/sprite_sets/: crono.tpsb  crosshairs.tpsb  white.tpsb
resources/deploy/sprite_sheets/: crono.json  crosshairs.json  flappy.json  scopes.json  white.json
resources/deploy/strings/: armada.strings
resources/raw/bitmap_fonts/: 04b_19_32_s.bmfc  comicsansms_32.bmfc  inconsolata_12.bmfc  inconsolata_16.bmfc  inconsolata_24.bmfc  inconsolata_32.bmfc  mickey_16.bmfc  mickey_32.bmfc  mickey_64.bmfc  monaco_32_s.bmfc  terminal_16.bmfc  terminal_8.bmfc  trebuchet_ms_16.bmfc
resources/raw/strings/: strings.csv
tools/: .deploy  boilerplate.py  deploy.py  example.py  md5b.py  pack.py  setup.bat  setup.py  stringpack.py  tpsb.py
tools/bmfont/bmfont_com/: bmfont_com.vcxproj
tools/bmfont/source/: bmfont.sln  bmfont.vcxproj  bmfont.vcxproj.filters  trace_generate.txt
tools/md5b/: binboblampclean.md5a  binboblampclean.md5m
tools/md5b/src/: exceptions.cpp  main.cpp  model.cpp  model.h
tools/pack/src/: main.cpp
tools/tpsb/src/: main.cpp  sprite_set.cpp  sprite_set.hpp
(+228 files in other folders)
