cmake_minimum_required(VERSION 2.8.4)
project(mandala)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    mandala/armada/armada.cpp
    mandala/armada/armada.hpp
    mandala/armada/bsp_state.cpp
    mandala/armada/bsp_state.hpp
    mandala/armada/console_state.cpp
    mandala/armada/console_state.hpp
    mandala/armada/data.h
    mandala/armada/debug_state.cpp
    mandala/armada/debug_state.hpp
    mandala/armada/pause_state.cpp
    mandala/armada/pause_state.hpp
    mandala/armada/performance_state.cpp
    mandala/armada/performance_state.h
    mandala/armada/skybox.cpp
    mandala/armada/skybox.hpp
    mandala/armada/test_state.cpp
    mandala/armada/test_state.hpp
    mandala/armada/user.cpp
    mandala/armada/user.h
    mandala/armada/world_hud_state.cpp
    mandala/armada/world_hud_state.hpp
    mandala/armada/world_state.cpp
    mandala/armada/world_state.hpp
    mandala/triad/loading_state.hpp
    mandala/triad/login_state.hpp
    mandala/triad/triad.cpp
    mandala/triad/triad.hpp
    mandala/aabb.hpp
    mandala/app.cpp
    mandala/app.hpp
    mandala/arcball_camera.cpp
    mandala/arcball_camera.hpp
    mandala/audio_context.cpp
    mandala/audio_context.hpp
    mandala/audio_device.cpp
    mandala/audio_device.hpp
    mandala/audio_mgr.cpp
    mandala/audio_mgr.hpp
    mandala/audio_source.cpp
    mandala/audio_source.hpp
    mandala/basic_gpu_program.cpp
    mandala/basic_gpu_program.hpp
    mandala/bitmap_font.cpp
    mandala/bitmap_font.hpp
    mandala/bitmap_font_gpu_program.cpp
    mandala/bitmap_font_gpu_program.hpp
    mandala/blur_horizontal_gpu_program.cpp
    mandala/blur_horizontal_gpu_program.hpp
    mandala/bmf.h
    mandala/boost.hpp
    mandala/bsp.cpp
    mandala/bsp.hpp
    mandala/bsp_entity.cpp
    mandala/bsp_entity.hpp
    mandala/bsp_gpu_program.cpp
    mandala/bsp_gpu_program.hpp
    mandala/camera.cpp
    mandala/camera.hpp
    mandala/circle.hpp
    mandala/collision.hpp
    mandala/color.hpp
    mandala/color_types.hpp
    mandala/factorial.hpp
    mandala/fnv.hpp
    mandala/frame_buffer.cpp
    mandala/frame_buffer.hpp
    mandala/frustum.hpp
    mandala/game.cpp
    mandala/game.hpp
    mandala/glm.hpp
    mandala/gpu.cpp
    mandala/gpu.hpp
    mandala/gpu_buffer.cpp
    mandala/gpu_buffer.hpp
    mandala/gpu_program.cpp
    mandala/gpu_program.hpp
    mandala/gpu_program_mgr.hpp
    mandala/gpu_vertices.hpp
    mandala/gui_button.cpp
    mandala/gui_button.hpp
    mandala/gui_canvas.cpp
    mandala/gui_canvas.hpp
    mandala/gui_gpu_program.cpp
    mandala/gui_gpu_program.hpp
    mandala/gui_image.cpp
    mandala/gui_image.hpp
    mandala/gui_label.cpp
    mandala/gui_label.hpp
    mandala/gui_layout.cpp
    mandala/gui_layout.hpp
    mandala/gui_node.cpp
    mandala/gui_node.hpp
    mandala/gui_scroll.cpp
    mandala/gui_scroll.hpp
    mandala/gui_state.cpp
    mandala/gui_state.hpp
    mandala/gui_textfield.cpp
    mandala/gui_textfield.hpp
    mandala/hash.hpp
    mandala/http_request.cpp
    mandala/http_request.hpp
    mandala/image.cpp
    mandala/image.hpp
    mandala/imagetype.h
    mandala/index_buffer.hpp
    mandala/index_type.hpp
    mandala/input_event.hpp
    mandala/interpolation.hpp
    mandala/io.hpp
    mandala/is_equal.hpp
    mandala/is_greater_than.hpp
    mandala/is_greater_than_or_equal.hpp
    mandala/is_less_than.hpp
    mandala/is_less_than_or_equal.hpp
    mandala/is_negative.hpp
    mandala/is_pow2.hpp
    mandala/line.hpp
    mandala/lua_mgr.cpp
    mandala/lua_mgr.hpp
    mandala/luabind.hpp
    mandala/main.cpp
    mandala/material.cpp
    mandala/material.hpp
    mandala/md5b.hpp
    mandala/model.cpp
    mandala/model.hpp
    mandala/model_animation.cpp
    mandala/model_animation.hpp
    mandala/model_gpu_program.cpp
    mandala/model_gpu_program.hpp
    mandala/model_instance.cpp
    mandala/model_instance.hpp
    mandala/mouse.cpp
    mandala/mouse.h
    mandala/node.cpp
    mandala/openal.hpp
    mandala/opengl.hpp
    mandala/pack.cpp
    mandala/pack.hpp
    mandala/pack_mgr.cpp
    mandala/pack_mgr.hpp
    mandala/padding.hpp
    mandala/particle_emitter.hpp
    mandala/particle_system.hpp
    mandala/plane.hpp
    mandala/platform.hpp
    mandala/platform_win32.cpp
    mandala/platform_win32.hpp
    mandala/pow.hpp
    mandala/quake_camera.cpp
    mandala/quake_camera.hpp
    mandala/range.hpp
    mandala/rectangle.hpp
    mandala/resource.cpp
    mandala/resource.hpp
    mandala/resource_mgr.cpp
    mandala/resource_mgr.hpp
    mandala/rpg_state.cpp
    mandala/rpg_state.h
    mandala/shadow_gpu_program.cpp
    mandala/shadow_gpu_program.hpp
    mandala/skeleton.cpp
    mandala/skeleton.hpp
    mandala/sound.cpp
    mandala/sound.hpp
    mandala/sphere.hpp
    mandala/sprite.cpp
    mandala/sprite.hpp
    mandala/sprite_animation.cpp
    mandala/sprite_animation.hpp
    mandala/sprite_set.cpp
    mandala/sprite_set.hpp
    mandala/state.hpp
    mandala/state_mgr.cpp
    mandala/state_mgr.hpp
    mandala/string_archive.cpp
    mandala/string_archive.hpp
    mandala/string_mgr.cpp
    mandala/string_mgr.hpp
    mandala/texture.cpp
    mandala/texture.hpp
    mandala/triangle.hpp
    mandala/types.hpp
    mandala/vertex_buffer.hpp
    mandala/window_event.hpp)

add_executable(mandala ${SOURCE_FILES})